Encriptacion de DB y Token

--- a/.env.example
+++ b/.env.example
@@ -58,4 +58,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-
+AES_KEY=clave_de_prueba_para_mi_examen_tecnico_2025
+AES_IV=1234567890abcdef
